[package]
name = "dyna-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust implementation of Dyna term library and solver"
license = "MIT"

[lib]
name = "dyna_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
ordered-float = "4.2"
priority-queue = "2.0"
indexmap = "2.1"
rustc-hash = "1.1"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "unify_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
